--- a/src/main/resources/templates/home_page.html
+++ b/src/main/resources/templates/home_page.html
@@ -333,7 +333,7 @@
             <a class="navbar-brand" href="#" th:href="@{/products}">Shop</a>
             <a class="navbar-brand" href="#" th:href="@{/login}">Login</a>
             <a class="navbar-brand" href="#" th:href="@{/users}">Users</a>
-            <a class="navbar-brand" href="#" th:href="@{/userpage}">Get info</a>
+            <a class="navbar-brand" href="#" th:href="@{/getinfo}">Get info</a>
             <a class="navbar-brand" href="#" th:href="@{/logout}">Log out</a>
         </div>
     </div>
