--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -261,8 +261,6 @@
                 top: 1.3em;
             }
         }
-
-
     </style>
 
 </head>
@@ -283,7 +281,7 @@
             <a class="navbar-brand" href="#" th:href="@{/products}">Shop</a>
             <a class="navbar-brand" href="#" th:href="@{/register}">Register</a>
             <a class="navbar-brand" href="#" th:href="@{/users}">Users</a>
-            <a class="navbar-brand" href="#" th:href="@{/user_page}">Get info</a>
+            <a class="navbar-brand" href="#" th:href="@{/getinfo}">Get info</a>
             <a class="navbar-brand" href="#" th:href="@{/logout}">Log out</a>
         </div>
     </div>
@@ -293,7 +291,7 @@
 <br>
 <br>
 <br>
-<b><h1> Choose your Style</h1></b>
+<b><h1>Choose your Style</h1></b>
 <div class="container">
     <section>
         <img src="https://www.maxpixel.net/static/photo/1x/Wristwatch-Rolex-Watches-Watch-Luxury-Watch-Class-4696644.jpg" class="img1"/>
