--- a/src/main/resources/templates/transfer_money.html
+++ b/src/main/resources/templates/transfer_money.html
@@ -84,7 +84,7 @@
                     <div class="row">
                         <div class="col-sm-6 col-sm-offset-3">
                             <input type="submit" name="search-submit" id="search-submit"
-                                   class="form-control btn btn-primary" value="submit" />
+                                   class="form-control btn btn-primary" value="send" />
                         </div>
                     </div>
                 </div>
