--- a/src/main/resources/templates/shopping_cart.html
+++ b/src/main/resources/templates/shopping_cart.html
@@ -616,14 +616,14 @@
                             </thead>
                             <tbody>
                             <tr th:each="item: ${listItems}">
-                                <td th:text="${item.product_name}">Item name</td>
+                                <td th:text="${item.productName}">Item name</td>
                                 <td th:text="${item.amount}">Amount</td>
                                 <td th:text="${item.price}">Price</td>
                                 <div th:with="result=${item.amount * item.price}">
                                     <td th:text="${result}"></td>
                                 </div>
                                 <td><form th:action="@{/shoppingcart}" method="post">
-                                    <input type="hidden" name="product_name" th:value=${item.product_name}>
+                                    <input type="hidden" name="productName" th:value=${item.productName}>
                                     <button type="submit" class="button button2"/>Delete</button>
                                 </form></td>
                                 </td>
