--- a/src/main/resources/templates/total.html
+++ b/src/main/resources/templates/total.html
@@ -489,6 +489,7 @@
 </nav>
 <div class="wrap cf">
     <h1 class="projTitle">Total</h1>
+<!--    <form th:action="@{/total}" method="post">-->
     <div class="heading cf">
         <h1></h1>
         <a href="/products" class="continue">Continue Shopping</a>
@@ -504,14 +505,9 @@
 
                         <img src="http://lorempixel.com/output/technics-q-c-300-300-4.jpg" alt="" class="itemImg" />
                         <h3>Total Cost</h3>
-
                         <p> Including Tax
                         </p>
-
-
                     </div>
-
-
                     <div class="prodTotal cartSection">
                         <td th:text="${shoppingCart.total}">Total</td>
                     </div>
@@ -526,10 +522,7 @@
                         <h3>My Wallet</h3>
 
                         <p>My Account</p>
-
                     </div>
-
-
                     <div class="prodTotal cartSection">
                         <td th:text="${shoppingCart.wallet}">Total</td>
                     </div>
