--- a/src/main/resources/templates/home_page.html
+++ b/src/main/resources/templates/home_page.html
@@ -341,7 +341,7 @@
 <br>
 <br>
 <br>
-<b><h1>Watches for You</h1></b>
+<b><h1>Time Zone</h1></b>
 <form th:action="@{/homepage}" method="get">
     <h4>High-precision watches that connect people.</h4>
         <img src="https://wallpaperaccess.com/full/810163.jpg"  class="img1" />
