--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -298,7 +298,7 @@
         <br>
         <br>
         <br>
-        <p>Watch 1 </p>
+        <p>Omega watch</p>
         <br>
         <form th:action="@{/watchdetail}" method="get">
             <input type="hidden" name="id" value="1" >
@@ -310,7 +310,7 @@
         <br>
         <br>
         <br>
-        <p>Watch 2</p>
+        <p>Gama watch</p>
         <br>
         <form th:action="@{/watchdetail}" method="get">
             <input type="hidden" name="id" value="2">
@@ -323,7 +323,7 @@
         <br>
         <br>
         <br>
-        <p>Watch 3</p>
+        <p>Momentum watch</p>
         <br>
         <form th:action="@{/watchdetail}" method="get">
             <input type="hidden" name="id" value="3">
@@ -335,7 +335,7 @@
         <br>
         <br>
         <br>
-        <p>Watch 4</p>
+        <p>Eternity watch</p>
         <br>
         <form th:action="@{/watchdetail}" method="get">
             <input type="hidden" name="id" value="4">
@@ -347,7 +347,7 @@
         <br>
         <br>
         <br>
-        <p>Watch 5</p>
+        <p>Light watch</p>
         <br>
         <form th:action="@{/watchdetail}" method="get">
             <input type="hidden" name="id" value="5">
@@ -359,7 +359,7 @@
         <br>
         <br>
         <br>
-        <p>Watch 6</p>
+        <p>Tempus watch</p>
         <br>
         <form th:action="@{/watchdetail}" method="get">
             <input type="hidden" name="id" value="6">
