--- a/src/main/resources/templates/watch_detail.html
+++ b/src/main/resources/templates/watch_detail.html
@@ -296,22 +296,22 @@
     <br>
     <section>
         <th:block th:switch="${product.productName}">
-            <div th:case="'Watch1'">
+            <div th:case="'OmegaWatch'">
                 <img src="https://www.maxpixel.net/static/photo/1x/Wristwatch-Rolex-Watches-Watch-Luxury-Watch-Class-4696644.jpg" class="img1"/>
             </div>
-            <div th:case="'Watch2'">
+            <div th:case="'GamaWatch'">
                 <img src="https://www.maxpixel.net/static/photo/1x/Steel-Metal-Watch-Dial-Time-Swiss-Luxury-Rolex-2171960.jpg" class="img1"/>
             </div>
-            <div th:case="'Watch3'">
+            <div th:case="'MomentumWatch'">
                 <img src="https://www.maxpixel.net/static/photo/1x/Luxury-Watch-Class-Watches-Rolex-Watch-Wristwatch-4874320.jpg" class="img1"/>
             </div>
-            <div th:case="'Watch4'">
+            <div th:case="'EternityWatch'">
                 <img src="https://www.maxpixel.net/static/photo/1x/Rolex-Watches-Watch-Luxury-Watch-Wristwatch-Class-4551369.jpg" class="img1"/>
             </div>
-            <div th:case="'Watch5'">
+            <div th:case="'LightWatch'">
                 <img src="https://www.maxpixel.net/static/photo/1x/Watch-Rolex-Datejust-2654530.jpg" class="img1"/>
             </div>
-            <div th:case="'Watch6'">
+            <div th:case="'TempusWatch'">
                 <img src="https://www.maxpixel.net/static/photo/1x/Luxury-Rolex-Swiss-Dial-Metal-Steel-Time-Watch-2171961.jpg" class="img1"/>
             </div>
         </th:block>
@@ -344,22 +344,22 @@
                 <div class="row">
                     <div class="col-sm-6 col-sm-offset-3">
                         <th:block th:switch="${product.productName}">
-                            <div th:case="'Watch1'">
+                            <div th:case="'OmegaWatch'">
                                 <input type="hidden" name="price" value="1000">
                             </div>
-                            <div th:case="'Watch2'">
+                            <div th:case="'GamaWatch'">
                                 <input type="hidden" name="price" value="1000">
                             </div>
-                            <div th:case="'Watch3'">
-                                <input type="hidden" name="price" value="1000">
+                            <div th:case="'MomentumWatch'">
+                                <input type="hidden" name="price" value="2000">
                             </div>
-                            <div th:case="'Watch4'">
-                                <input type="hidden" name="price" value="1000">
+                            <div th:case="'EternityWatch'">
+                                <input type="hidden" name="price" value="1500">
                             </div>
-                            <div th:case="'Watch5'">
-                                <input type="hidden" name="price" value="1000">
+                            <div th:case="'LightWatch'">
+                                <input type="hidden" name="price" value="1500">
                             </div>
-                            <div th:case="'Watch6'">
+                            <div th:case="'TempusWatch'">
                                 <input type="hidden" name="price" value="1000">
                             </div>
                         </th:block>
