--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -298,7 +298,7 @@
         <br>
         <br>
         <br>
-        <p>Omega watch</p>
+        <p>OmegaWatch</p>
         <br>
         <form th:action="@{/watchdetail}" method="get">
             <input type="hidden" name="id" value="1" >
@@ -310,7 +310,7 @@
         <br>
         <br>
         <br>
-        <p>Gama watch</p>
+        <p>GamaWatch</p>
         <br>
         <form th:action="@{/watchdetail}" method="get">
             <input type="hidden" name="id" value="2">
@@ -323,7 +323,7 @@
         <br>
         <br>
         <br>
-        <p>Momentum watch</p>
+        <p>MomentumWatch</p>
         <br>
         <form th:action="@{/watchdetail}" method="get">
             <input type="hidden" name="id" value="3">
@@ -335,7 +335,7 @@
         <br>
         <br>
         <br>
-        <p>Eternity watch</p>
+        <p>EternityWatch</p>
         <br>
         <form th:action="@{/watchdetail}" method="get">
             <input type="hidden" name="id" value="4">
@@ -347,7 +347,7 @@
         <br>
         <br>
         <br>
-        <p>Light watch</p>
+        <p>LightWatch</p>
         <br>
         <form th:action="@{/watchdetail}" method="get">
             <input type="hidden" name="id" value="5">
@@ -359,7 +359,7 @@
         <br>
         <br>
         <br>
-        <p>Tempus watch</p>
+        <p>TempusWatch</p>
         <br>
         <form th:action="@{/watchdetail}" method="get">
             <input type="hidden" name="id" value="6">
