--- a/src/main/resources/templates/shopping_cart.html
+++ b/src/main/resources/templates/shopping_cart.html
@@ -635,10 +635,9 @@
             </li>
         </ul>
     </div>
-
     <div class="subtotal cf">
         <ul>
-            <li class="totalRow"><a href="/total" class="btn continue">Checkout</a></li>
+            <li class="totalRow"><a href="/total" class="btn continue">Total</a></li>
         </ul>
     </div>
 </div>
