--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,45 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<html lang="id" dir="ltr">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Something went wrong</title>
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-          crossorigin="anonymous">
-    <style>
-        h1 {text-align: center;}
-        h1 {color: red;}
-        p {text-align: center;}
-        div {text-align: center;}
-    </style>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="apenab1995" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous" />
 </head>
-<body>
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed"
-                    data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-                    aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span> <span
-                    class="icon-bar"></span> <span class="icon-bar"></span> <span
-                    class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#" th:href="@{/}">Home Page
-            </a>
+<body class="bg-dark text-white py-5">
+<div class="container py-5">
+    <div class="row">
+        <div class="col-md-2 text-center">
+            <p><i class="fa fa-exclamation-triangle fa-5x"></i><br/>Status Code: 404</p>
+        </div>
+        <div class="col-md-10">
+            <h3>Not found</h3>
+            <p><br/>Something went wrong! Please go back to the previous page to continue browsing.</p>
+            <a class="btn btn-danger" href="javascript:history.back()">Go Back</a>
         </div>
     </div>
-</nav>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<div class="container text-center">
-    <h1>Something went wrong!</h1>
-    <br>
-    <h2>Our engineers are on it.</h2>
 </div>
 </body>
 </html>
