--- a/src/main/resources/templates/purchase.html
+++ b/src/main/resources/templates/purchase.html
@@ -470,7 +470,6 @@
     </script>
 </head>
 <body>
-
 <!-- create navigation bar ( header) -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
@@ -489,7 +488,7 @@
     </div>
 </nav>
 <div class="wrap cf">
-<form th:action="@{/purchase}" method="post">
+<!--<form th:action="@{/purchase}" method="POST">-->
     <h1 class="projTitle">Purchase</h1>
     <div th:if="${shoppingCart.wallet<0}">
         <div class="alert alert-danger">Not enough money on the wallet. Remove items</div>
@@ -500,39 +499,28 @@
     <div class="heading cf">
         <h1></h1>
         <a href="/products" class="continue">Continue Shopping</a>
-
     </div>
     <div class="cart">
         <ul class="cartWrap">
-
             <li class="items even">
-
                 <div class="infoWrap">
                     <div class="cartSection">
-
                         <img src="http://lorempixel.com/output/technics-q-c-300-300-4.jpg" alt="" class="itemImg" />
                         <h3>Total Cost</h3>
-
                         <p> Including Tax
                         </p>
-
                     </div>
-
                     <div class="prodTotal cartSection">
                         <td th:text="${shoppingCart.total}">Total</td>
                     </div>
                 </div>
             </li>
             <li class="items even">
-
                 <div class="infoWrap">
                     <div class="cartSection">
-
                         <img src="http://lorempixel.com/output/technics-q-c-300-300-4.jpg" alt="" class="itemImg" />
                         <h3>Wallet</h3>
-
                         <p>My Account</p>
-
                     </div>
                     <div class="prodTotal cartSection">
 <!--                        <div th:if="${shoppingCart.wallet<0}">-->
@@ -543,7 +531,6 @@
                 </div>
                   </ul>
                 </div>
-
             </li>
     <br>
     <br>
@@ -551,14 +538,13 @@
     <div th:if="${shoppingCart.wallet<0}">
         <div class="subtotal cf">
             <ul>
-                <li class="totalRow"><a href="/shoppingcart" class="btn continue">Edit items</a></li>
+                <li class="totalRow"><a href="/shoppingcart" class="btn continue" >Edit items</a></li>
             </ul>
         </div>
     </div>
         </ul>
      </form>
     </div>
-
 </div>
 </div>
 </div>
