--- a/src/main/resources/templates/purchase.html
+++ b/src/main/resources/templates/purchase.html
@@ -26,7 +26,7 @@
             margin: 0;
             padding: 0;
             border: 0;
-            font: inherit;
+            /*font: inherit;*/
             font-size: 100%;
             vertical-align: baseline;
         }
@@ -73,7 +73,7 @@
         body {
             color: #333;
             -webkit-font-smoothing: antialiased;
-            font-family: "Droid Serif", serif;
+            /*font-family: "Droid Serif", serif;*/
         }
 
         img {
@@ -103,7 +103,7 @@
         }
 
         .projTitle {
-            font-family: "Montserrat", sans-serif;
+            /*font-family: "Montserrat", sans-serif;*/
             font-weight: bold;
             text-align: center;
             font-size: 2em;
@@ -113,7 +113,7 @@
             text-transform: uppercase;
         }
         .projTitle span {
-            font-family: "Droid Serif", serif;
+            /*font-family: "Droid Serif", serif;*/
             font-weight: normal;
             font-style: italic;
             text-transform: lowercase;
@@ -125,13 +125,13 @@
             border-bottom: 1px solid #d0d0d0;
         }
         .heading h1 {
-            font-family: "Droid Serif", serif;
+            /*font-family: "Droid Serif", serif;*/
             font-size: 2em;
             float: left;
         }
         .heading a.continue:link, .heading a.continue:visited {
             text-decoration: none;
-            font-family: "Montserrat", sans-serif;
+            /*font-family: "Montserrat", sans-serif;*/
             letter-spacing: -0.015em;
             font-size: 0.75em;
             padding: 1em;
@@ -168,7 +168,7 @@
         .tableHead {
             display: table;
             width: 100%;
-            font-family: "Montserrat", sans-serif;
+            /*font-family: "Montserrat", sans-serif;*/
             font-size: 0.75em;
         }
         .tableHead li {
