--- a/src/main/resources/templates/total.html
+++ b/src/main/resources/templates/total.html
@@ -26,13 +26,16 @@
             margin: 0;
             padding: 0;
             border: 0;
-            font: inherit;
+            /*font: inherit;*/
             font-size: 100%;
             vertical-align: baseline;
         }
 
         html {
             line-height: 1;
+        }
+        h4{
+            position: static;
         }
 
         ol, ul {
@@ -73,7 +76,7 @@
         body {
             color: #333;
             -webkit-font-smoothing: antialiased;
-            font-family: "Droid Serif", serif;
+            /*font-family: "Droid Serif", serif;*/
         }
         .button {
             background-color: #1F51FF;
@@ -119,7 +122,7 @@
         }
 
         .projTitle {
-            font-family: "Montserrat", sans-serif;
+            /*font-family: "Montserrat", sans-serif;*/
             font-weight: bold;
             text-align: center;
             font-size: 2em;
@@ -129,7 +132,7 @@
             text-transform: uppercase;
         }
         .projTitle span {
-            font-family: "Droid Serif", serif;
+            /*font-family: "Droid Serif", serif;*/
             font-weight: normal;
             font-style: italic;
             text-transform: lowercase;
@@ -147,7 +150,7 @@
         }
         .heading a.continue:link, .heading a.continue:visited {
             text-decoration: none;
-            font-family: "Montserrat", sans-serif;
+            /*font-family: "Montserrat", sans-serif;*/
             letter-spacing: -0.015em;
             font-size: 0.75em;
             padding: 1em;
@@ -184,7 +187,7 @@
         .tableHead {
             display: table;
             width: 100%;
-            font-family: "Montserrat", sans-serif;
+            /*font-family: "Montserrat", sans-serif;*/
             font-size: 0.75em;
         }
         .tableHead li {
@@ -519,7 +522,7 @@
                             </p>
                         </div>
                         <div class="prodTotal cartSection">
-                            <td th:text="${shoppingCart.total}">Total</td>
+                            <h4><td th:text="${shoppingCart.total}">Total</td> </h4>
                         </div>
                     </div>
                 </li>
@@ -531,7 +534,7 @@
                             <p>My Account</p>
                         </div>
                         <div class="prodTotal cartSection">
-                            <td th:text="${shoppingCart.wallet}">Total</td>
+                            <h4><td th:text="${shoppingCart.wallet}">Wallet</td></h4>
                         </div>
                     </div>
                 </li>
