--- a/src/main/resources/templates/total.html
+++ b/src/main/resources/templates/total.html
@@ -95,6 +95,41 @@
 
         .button2 {padding: 8px 24px;}
 
+        .button4 {
+            background-color: #67b867;
+            border: none;
+            color: white;
+            text-align: center;
+            text-decoration: none;
+            display: block;
+            float:left;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            margin-left: 35%;
+            margin-top: 0%;
+        }
+
+        .button4 {padding: 6px 26px;}
+
+        .button3 {
+            background-color:#1F51FF;
+            background-color: #67b867;
+            border: none;
+            color: white;
+            text-align: center;
+            text-decoration: none;
+            /*display: inline-table;*/
+            float:left;
+            font-size: 14px;
+            margin: 4px 2px;
+            cursor: pointer;
+            margin-left: 75%;
+            margin-top: 0%;
+        }
+
+        .button3 {padding: 10px 26px;}
+
         img {
             max-width: 100%;
         }
@@ -509,7 +544,9 @@
         <h1 class="projTitle">Total</h1>
         <div class="heading cf">
             <h1></h1>
-            <a href="/products" class="continue">Continue Shopping</a>
+            <form th:action="@{/products}" method="get">
+                <li class="totalRow"><button type="submit" class="button3 button3 btn continue"/>Continue Shopping</button></li>
+            </form>
         </div>
         <div class="cart">
             <ul class="cartWrap">
@@ -542,9 +579,8 @@
         </div>
         <div class="subtotal cf">
             <ul>
-<!--                <form th:action="@{/purchase}" method="post">-->
-                    <li class="totalRow"><a href="/purchase" class="btn continue">Checkout</a></li>
-<!--                    <li class="totalRow"><button class="btn continue"/>Checkout</button></li>-->
+                <form th:action="@{/purchase}" method="get">
+                    <li class="totalRow"><button type="submit" class="button4 button4 btn continue">Checkout</button></li>
                 </form>
             </ul>
         </div>
